--- a/CPClient/src/main/resources/fxml/stockmanUI/Goods.fxml
+++ b/CPClient/src/main/resources/fxml/stockmanUI/Goods.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="594.0" prefWidth="921.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.stockmanUI.GoodsController">
+<AnchorPane style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.stockmanUI.GoodsController">
    <children>
-  <!--  <fx:include source="Stockman.fxml" /> -->
-      <Pane prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;">
+  <fx:include source="Stockman.fxml" />
+      <Pane layoutX="216.0" layoutY="148.0" prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;">
          <children>
             <Label layoutX="34.0" layoutY="14.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
             <Label layoutX="55.0" layoutY="23.0" text="商品管理">
@@ -25,7 +25,7 @@
                </image>
             </ImageView>
          </children></Pane>
-      <Pane layoutX="215.0" layoutY="158.0" prefHeight="435.0" prefWidth="706.0" style="-fx-background-color: #FFB5B5;">
+      <Pane layoutX="431.0" layoutY="310.0" prefHeight="435.0" prefWidth="706.0" style="-fx-background-color: #FFB5B5;">
          <children>
             <Label layoutX="483.0" layoutY="21.0" />
             <ImageView fitHeight="200.0" fitWidth="200.0" layoutY="2.0">
@@ -84,18 +84,9 @@
             <Button fx:id="saveGoodsInfoBtn" layoutX="611.0" layoutY="352.0" mnemonicParsing="false" onAction="#setSaveGoodsInfoBtn" prefHeight="27.0" prefWidth="65.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="保存" textFill="WHITE" />
          </children>
       </Pane>
-      <Pane layoutY="159.0" prefHeight="435.0" prefWidth="196.0" style="-fx-background-color: #FFB5B5;">
+      <Pane layoutX="216.0" layoutY="310.0" prefHeight="435.0" prefWidth="196.0" style="-fx-background-color: #FFB5B5;">
          <children>
-            <VBox layoutX="7.0" layoutY="54.0" prefHeight="369.0" prefWidth="182.0" style="-fx-border-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 15;">
-               <children>
-                  <RadioButton mnemonicParsing="false" prefHeight="42.0" prefWidth="213.0" text="分类1" textFill="#9f353a" />
-                  <RadioButton mnemonicParsing="false" prefHeight="42.0" prefWidth="213.0" text="分类2" textFill="#9f353a" />
-                  <RadioButton mnemonicParsing="false" prefHeight="42.0" prefWidth="213.0" text="分类3" textFill="#9f353a" />
-                  <RadioButton mnemonicParsing="false" prefHeight="42.0" prefWidth="213.0" text="分类4" textFill="#9f353a" />
-                  <RadioButton mnemonicParsing="false" prefHeight="42.0" prefWidth="213.0" text="分类5" textFill="#9f353a" />
-                  <RadioButton mnemonicParsing="false" prefHeight="42.0" prefWidth="213.0" text="分类6" textFill="#9f353a" />
-               </children>
-            </VBox>
+            <VBox fx:id="vBox" layoutX="7.0" layoutY="54.0" prefHeight="369.0" prefWidth="182.0" style="-fx-border-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 15;" />
             <Pane layoutX="8.0" layoutY="6.0" prefHeight="42.0" prefWidth="180.0" style="-fx-border-color: #ff7575; -fx-border-radius: 12;">
                <children>
                   <ImageView fx:id="allSelectBtn" fitHeight="24.0" fitWidth="24.0" layoutX="14.0" layoutY="9.0" onMouseClicked="#setAllSelectBtn">
