--- a/CPClient/src/main/resources/fxml/salesmanUI/Sale.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/Sale.fxml
@@ -19,7 +19,7 @@
             </Label>
             <ImageView layoutX="1164.0" layoutY="14.0">
                <image>
-                  <Image url="@/img/logOut.png" />
+                  <Image url="@../../img/logOut.png" />
                </image>
             </ImageView>
          </children>
@@ -33,7 +33,7 @@
             </Label>
             <ImageView fitHeight="599.0" fitWidth="958.0" layoutX="12.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@/img/1.jpg" />
+                  <Image url="@../../img/1.jpg" />
                </image>
             </ImageView>
          </children></Pane>
