--- a/CPClient/src/main/resources/fxml/salesmanUI/SaleDraft.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/SaleDraft.fxml
@@ -18,7 +18,7 @@
             </Label>
             <ImageView layoutX="1158.0" layoutY="16.0">
                <image>
-                  <Image url="@/img/logOut.png" />
+                  <Image url="@../../img/logOut.png" />
                </image>
             </ImageView>
          </children>
@@ -108,7 +108,7 @@
             </Label>
             <ImageView fitHeight="200.0" fitWidth="200.0" layoutY="2.0">
                <image>
-                  <Image url="@/img/lamp1.JPG" />
+                  <Image url="@../../img/lamp1.JPG" />
                </image>
             </ImageView>
          </children>
@@ -141,7 +141,7 @@
             </Label>
             <ImageView fitHeight="200.0" fitWidth="200.0">
                <image>
-                  <Image url="@/img/lamp1.JPG" />
+                  <Image url="@../../img/lamp1.JPG" />
                </image>
             </ImageView>
          </children>
