--- a/CPClient/src/main/resources/fxml/salesmanUI/SaleNewDetail.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/SaleNewDetail.fxml
@@ -19,7 +19,7 @@
             </Label>
             <ImageView layoutX="1160.0" layoutY="14.0">
                <image>
-                  <Image url="@/img/logOut.png" />
+                  <Image url="@../../img/logOut.png" />
                </image>
             </ImageView>
          </children>
