--- a/CPClient/src/main/resources/fxml/stockmanUI/Goods.fxml
+++ b/CPClient/src/main/resources/fxml/stockmanUI/Goods.fxml
@@ -13,9 +13,9 @@
          <content>
             <Pane minHeight="435.0" minWidth="706.0">
                <children>
-                  <VBox fx:id="vBox" minHeight="435.0" minWidth="706.0">
+                  <VBox fx:id="goodsVBox" minHeight="435.0" minWidth="706.0">
                      <children>
-                        <Pane prefHeight="435.0" prefWidth="706.0" style="-fx-background-color: #FFB5B5;">
+                        <Pane fx:id="goodsPane" prefHeight="435.0" prefWidth="706.0" style="-fx-background-color: #FFB5B5;">
                            <children>
                               <Label layoutX="483.0" layoutY="21.0" />
                               <ImageView fitHeight="200.0" fitWidth="200.0" layoutY="2.0">
@@ -105,7 +105,7 @@
                <children>
                   <Label fx:id="presentLocation" layoutX="49.0" layoutY="13.0" prefHeight="17.0" prefWidth="113.0" />
                   <Label layoutX="-3.0" layoutY="13.0" />
-                  <Label fx:id="presentLocation" layoutX="18.0" layoutY="10.0" prefHeight="23.0" prefWidth="144.0" text="提示" textFill="#9f353a" />
+                  <Label fx:id="presentLocation" layoutX="11.0" layoutY="10.0" prefHeight="23.0" prefWidth="159.0" text="提示" textFill="#9f353a" />
                </children>
             </Pane>
          </children></Pane>
