--- a/CPClient/src/main/resources/fxml/stockmanUI/Stockman.fxml
+++ b/CPClient/src/main/resources/fxml/stockmanUI/Stockman.fxml
@@ -24,7 +24,6 @@
                 <MenuItem fx:id="newPresentListBtn" mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="ui.saleUI.Sale.css" text="库存赠送单" />
                 <MenuItem fx:id="newStockOverflowListBtn" mnemonicParsing="false" style="-fx-background-color: transparent;" text="库存报溢单" />
                   <MenuItem fx:id="newStockLostListBtn" mnemonicParsing="false" style="-fx-background-color: transparent;" text="库存报损单" />
-                  <MenuItem fx:id="newAlarmListBtn" mnemonicParsing="false" style="-fx-background-color: transparent;" text="库存报警单" />
               </items>
                <font>
                   <Font size="18.0" />
@@ -55,7 +54,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="draftBtn" mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="草稿" textFill="#9f353a">
+            <Button fx:id="draftBtn" mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="库存" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
                </font>
