--- a/CPClient/src/main/resources/fxml/stockmanUI/lookReportList.fxml
+++ b/CPClient/src/main/resources/fxml/stockmanUI/lookReportList.fxml
@@ -27,17 +27,18 @@
             </ImageView>
          </children>
       </Pane>
-      <Pane layoutX="220.0" layoutY="123.0" prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;">
+      <Pane layoutX="214.0" layoutY="123.0" prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;">
          <children>
             <Label layoutX="34.0" layoutY="14.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
-            <Label layoutX="55.0" layoutY="23.0" text="库存报警单">
+            <Label layoutX="55.0" layoutY="23.0" prefHeight="24.0" prefWidth="106.0" text="库存报溢单">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Button layoutX="25.0" layoutY="78.0" mnemonicParsing="false" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #9f353a;" text="全部" textFill="#9f353a" />
-            <TextField layoutX="580.0" layoutY="79.0" style="-fx-background-radius: 23; -fx-border-radius: 23;" />
-            <Button layoutX="812.0" layoutY="79.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="83.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="查询" textFill="WHITE" />
+            <Button layoutX="7.0" layoutY="78.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="83.0" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #9f353a;" text="条件筛选" textFill="#9f353a" />
+            <TextField layoutX="603.0" layoutY="79.0" style="-fx-background-radius: 23; -fx-border-radius: 23;" />
+            <Button layoutX="830.0" layoutY="79.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="83.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="查询" textFill="WHITE" />
+            <ComboBox fx:id="combobox1" layoutX="108.0" layoutY="79.0" prefWidth="150.0" />
          </children></Pane>
       <VBox layoutX="13.0" layoutY="74.0" prefHeight="730.0" prefWidth="122.0" style="-fx-background-color: #ff7575;">
          <children>
@@ -72,7 +73,12 @@
                   <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="消息" />
                </items>
             </MenuButton>
-            <Button fx:id="draftBtn" mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparant;" text="草稿" textFill="#9f353a">
+            <Button fx:id="draftBtn" mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparant;" text="商品" textFill="#9f353a">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="draftBtn1" mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparant;" text="库存" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
                </font>
@@ -119,7 +125,7 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label layoutX="488.0" layoutY="98.0" prefHeight="24.0" prefWidth="70.0" text="警戒线">
+            <Label layoutX="488.0" layoutY="98.0" prefHeight="24.0" prefWidth="83.0" text="实际数量">
                <font>
                   <Font size="18.0" />
                </font>
@@ -129,7 +135,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label fx:id="alarm2" layoutX="578.0" layoutY="94.0" prefHeight="24.0" prefWidth="70.0" text="2000">
+            <Label fx:id="alarm2" layoutX="594.0" layoutY="94.0" prefHeight="24.0" prefWidth="70.0" text="2000">
                <font>
                   <Font size="24.0" />
                </font>
@@ -171,17 +177,17 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label layoutX="488.0" layoutY="98.0" prefHeight="24.0" prefWidth="70.0" text="警戒线">
+            <Label layoutX="488.0" layoutY="98.0" prefHeight="24.0" prefWidth="83.0" text="实际数量">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label layoutX="267.0" layoutY="98.0" prefHeight="24.0" prefWidth="79.0" text="当前数量">
+            <Label layoutX="267.0" layoutY="98.0" prefHeight="24.0" prefWidth="79.0" text="库存数量">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label fx:id="alarm1" layoutX="578.0" layoutY="94.0" prefHeight="24.0" prefWidth="70.0" text="2000">
+            <Label fx:id="alarm1" layoutX="588.0" layoutY="94.0" prefHeight="24.0" prefWidth="70.0" text="2000">
                <font>
                   <Font size="24.0" />
                </font>
